# ouro-closures

./: Cargo.toml
src/: main.rs
